[package]
name = "cedar_detect"
version = "0.4.0"
edition = "2021"

[[bin]]
name = "cedar-detect-server"
path = "src/bin/cedar_detect_server.rs"

[dependencies]
approx = "0.5.1"
clap = { version = "4.3.19", features = ["derive"] }
env_logger = "0.10.0"
image = "0.24.6"
imageproc = "0.23.0"
libc = "0.2.147"
log = "0.4.19"
prost = "0.11.9"
prost-types = "0.11.9"
tokio = { version = "1.32.0", features = ["macros", "rt-multi-thread"] }
tonic = "0.9.2"
tonic-web = "0.9.2"

[build-dependencies]
tonic-build = "0.9"
prost-build = "0.11.9"

[profile.release]
# See https://github.com/johnthagen/min-sized-rust.
strip = true
lto = true
